// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`filter-menu > passes through additional html attributes 1`] = `
<span
  class="filter-menu-button class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="filter menu button a11y text"
    class="filter-menu-button__button"
    type="button"
  >
    <span
      class="filter-menu-button__button-cell"
    >
      <span
        class="filter-menu-button__button-text"
      >
        text
      </span>
      <svg
        aria-hidden="true"
        class="icon icon--12"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-down-12"
            viewBox="0 0 12 12"
          >
            <path
              clip-rule="evenodd"
              d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
              fill-rule="evenodd"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-down-12"
        />
      </svg>
    </span>
  </button>
  <span
    class="filter-menu-button__menu"
  >
    <!--F#f_6-->
    <div
      class="filter-menu-button__items"
      id="s0-@menu"
      role="menu"
    >
      <div
        aria-checked="false"
        class="filter-menu-button__item"
        role="menuitemcheckbox"
      >
        <span
          class="filter-menu-button__checkbox"
        >
          <svg
            aria-hidden="true"
            class="icon icon--18"
            focusable="false"
          >
            <defs>
              <symbol
                id="icon-checkbox-unchecked-18"
                viewBox="0 0 18 18"
              >
                <path
                  d="M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"
                />
              </symbol>
            </defs>
            <use
              href="#icon-checkbox-unchecked-18"
            />
          </svg>
        </span>
        <span
          class="filter-menu-button__text"
        >
          <!--F#17[0]-->
          item 1
          <!--F/-->
        </span>
      </div>
      <div
        aria-checked="false"
        class="filter-menu-button__item"
        role="menuitemcheckbox"
      >
        <span
          class="filter-menu-button__checkbox"
        >
          <svg
            aria-hidden="true"
            class="icon icon--18"
            focusable="false"
          >
            <use
              href="#icon-checkbox-unchecked-18"
            />
          </svg>
        </span>
        <span
          class="filter-menu-button__text"
        >
          <!--F#17[1]-->
          item 2
          <!--F/-->
        </span>
      </div>
      <div
        aria-checked="false"
        class="filter-menu-button__item"
        role="menuitemcheckbox"
      >
        <span
          class="filter-menu-button__checkbox"
        >
          <svg
            aria-hidden="true"
            class="icon icon--18"
            focusable="false"
          >
            <use
              href="#icon-checkbox-unchecked-18"
            />
          </svg>
        </span>
        <span
          class="filter-menu-button__text"
        >
          <!--F#17[2]-->
          item 3
          <!--F/-->
        </span>
      </div>
    </div>
    <!--F/-->
  </span>
</span>
`;

exports[`filter-menu > passes through additional html attributes 2`] = `
<span
  class="filter-menu-button class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  style="color:red"
  type="number"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="filter menu button a11y text"
    class="filter-menu-button__button"
    type="button"
  >
    <span
      class="filter-menu-button__button-cell"
    >
      <span
        class="filter-menu-button__button-text"
      >
        text
      </span>
      <svg
        aria-hidden="true"
        class="icon icon--12"
        focusable="false"
      >
        <defs>
          <symbol
            id="icon-chevron-down-12"
            viewBox="0 0 12 12"
          >
            <path
              clip-rule="evenodd"
              d="M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"
              fill-rule="evenodd"
            />
          </symbol>
        </defs>
        <use
          href="#icon-chevron-down-12"
        />
      </svg>
    </span>
  </button>
  <span
    class="filter-menu-button__menu"
  >
    <!--F#f_6-->
    <div
      class="filter-menu-button__items"
      id="s0-@menu"
      role="menu"
    >
      <div
        aria-checked="false"
        class="filter-menu-button__item"
        role="menuitemcheckbox"
      >
        <span
          class="filter-menu-button__checkbox"
        >
          <svg
            aria-hidden="true"
            class="icon icon--18"
            focusable="false"
          >
            <defs>
              <symbol
                id="icon-checkbox-unchecked-18"
                viewBox="0 0 18 18"
              >
                <path
                  d="M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"
                />
              </symbol>
            </defs>
            <use
              href="#icon-checkbox-unchecked-18"
            />
          </svg>
        </span>
        <span
          class="filter-menu-button__text"
        >
          <!--F#17[0]-->
          item 1
          <!--F/-->
        </span>
      </div>
      <div
        aria-checked="false"
        class="filter-menu-button__item"
        role="menuitemcheckbox"
      >
        <span
          class="filter-menu-button__checkbox"
        >
          <svg
            aria-hidden="true"
            class="icon icon--18"
            focusable="false"
          >
            <use
              href="#icon-checkbox-unchecked-18"
            />
          </svg>
        </span>
        <span
          class="filter-menu-button__text"
        >
          <!--F#17[1]-->
          item 2
          <!--F/-->
        </span>
      </div>
      <div
        aria-checked="false"
        class="filter-menu-button__item"
        role="menuitemcheckbox"
      >
        <span
          class="filter-menu-button__checkbox"
        >
          <svg
            aria-hidden="true"
            class="icon icon--18"
            focusable="false"
          >
            <use
              href="#icon-checkbox-unchecked-18"
            />
          </svg>
        </span>
        <span
          class="filter-menu-button__text"
        >
          <!--F#17[2]-->
          item 3
          <!--F/-->
        </span>
      </div>
    </div>
    <!--F/-->
  </span>
</span>
`;

exports[`filter-menu > passes through additional html attributes from child item 1`] = `
<div
  aria-checked="false"
  class="filter-menu-button__item class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="menuitemcheckbox"
  style="color:red"
  type="number"
>
  <span
    class="filter-menu-button__checkbox"
  >
    <svg
      aria-hidden="true"
      class="icon icon--18"
      focusable="false"
    >
      <defs>
        <symbol
          id="icon-checkbox-unchecked-18"
          viewBox="0 0 18 18"
        >
          <path
            d="M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-checkbox-unchecked-18"
      />
    </svg>
  </span>
  <span
    class="filter-menu-button__text"
  />
</div>
`;

exports[`filter-menu > passes through additional html attributes from child item 2`] = `
<div
  aria-checked="false"
  class="filter-menu-button__item class1"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  role="menuitemcheckbox"
  style="color:red"
  type="number"
>
  <span
    class="filter-menu-button__checkbox"
  >
    <svg
      aria-hidden="true"
      class="icon icon--18"
      focusable="false"
    >
      <defs>
        <symbol
          id="icon-checkbox-unchecked-18"
          viewBox="0 0 18 18"
        >
          <path
            d="M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"
          />
        </symbol>
      </defs>
      <use
        href="#icon-checkbox-unchecked-18"
      />
    </svg>
  </span>
  <span
    class="filter-menu-button__text"
  />
</div>
`;

exports[`filter-menu > renders basic version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"filter-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33maria-label[39m=[32m"filter menu button a11y text"[39m
      [33mclass[39m=[32m"filter-menu-button__button"[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"filter-menu-button__button-cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"filter-menu-button__button-text"[39m
        [36m>[39m
          [0mtext[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"filter-menu-button__menu"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"filter-menu-button__items"[39m
        [33mid[39m=[32m"s0-@menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-checkbox-unchecked-18"[39m
                  [33mviewBox[39m=[32m"0 0 18 18"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 1[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 2[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 3[0m
          [36m</span>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`filter-menu > renders checked item 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"filter-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33maria-label[39m=[32m"filter menu button a11y text"[39m
      [33mclass[39m=[32m"filter-menu-button__button"[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"filter-menu-button__button-cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"filter-menu-button__button-text"[39m
        [36m>[39m
          [0mtext[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"filter-menu-button__menu"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"filter-menu-button__items"[39m
        [33mid[39m=[32m"s0-@menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-checkbox-unchecked-18"[39m
                  [33mviewBox[39m=[32m"0 0 18 18"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 1[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 2[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 3[0m
          [36m</span>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`filter-menu > renders disabled item 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"filter-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33maria-label[39m=[32m"filter menu button a11y text"[39m
      [33mclass[39m=[32m"filter-menu-button__button"[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"filter-menu-button__button-cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"filter-menu-button__button-text"[39m
        [36m>[39m
          [0mtext[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"filter-menu-button__menu"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"filter-menu-button__items"[39m
        [33mid[39m=[32m"s0-@menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-checkbox-unchecked-18"[39m
                  [33mviewBox[39m=[32m"0 0 18 18"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 1[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 2[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 3[0m
          [36m</span>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`filter-menu > renders with footer 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"filter-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33maria-label[39m=[32m"filter menu button a11y text"[39m
      [33mclass[39m=[32m"filter-menu-button__button"[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"filter-menu-button__button-cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"filter-menu-button__button-text"[39m
        [36m>[39m
          [0mtext[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"filter-menu-button__menu"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"filter-menu-button__items"[39m
        [33mid[39m=[32m"s0-@menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-checkbox-unchecked-18"[39m
                  [33mviewBox[39m=[32m"0 0 18 18"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 1[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 2[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 3[0m
          [36m</span>[39m
        [36m</div>[39m
      [36m</div>[39m
      [36m<button[39m
        [33maria-label[39m=[32m"footer button a11y text"[39m
        [33mclass[39m=[32m"filter-menu-button__footer"[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [0mApply[0m
      [36m</button>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`filter-menu > renders with footer text 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"filter-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33maria-label[39m=[32m"filter menu button a11y text"[39m
      [33mclass[39m=[32m"filter-menu-button__button"[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"filter-menu-button__button-cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"filter-menu-button__button-text"[39m
        [36m>[39m
          [0mtext[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"filter-menu-button__menu"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"filter-menu-button__items"[39m
        [33mid[39m=[32m"s0-@menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-checkbox-unchecked-18"[39m
                  [33mviewBox[39m=[32m"0 0 18 18"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 1[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 2[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 3[0m
          [36m</span>[39m
        [36m</div>[39m
      [36m</div>[39m
      [36m<button[39m
        [33mclass[39m=[32m"filter-menu-button__footer"[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [0mtest text[0m
      [36m</button>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;

exports[`filter-menu > renders with footer text and accessible text 1`] = `
"[36m<DocumentFragment>[39m
  [36m<span[39m
    [33mclass[39m=[32m"filter-menu-button"[39m
  [36m>[39m
    [36m<button[39m
      [33maria-expanded[39m=[32m"false"[39m
      [33maria-haspopup[39m=[32m"true"[39m
      [33maria-label[39m=[32m"filter menu button a11y text"[39m
      [33mclass[39m=[32m"filter-menu-button__button"[39m
      [33mtype[39m=[32m"button"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"filter-menu-button__button-cell"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"filter-menu-button__button-text"[39m
        [36m>[39m
          [0mtext[0m
        [36m</span>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--12"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-chevron-down-12"[39m
              [33mviewBox[39m=[32m"0 0 12 12"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M1.808 4.188a.625.625 0 0 1 .884 0L6 7.495l3.308-3.307a.625.625 0 1 1 .884.885l-3.75 3.749a.625.625 0 0 1-.884 0l-3.75-3.749a.626.626 0 0 1 0-.885Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-chevron-down-12"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</span>[39m
    [36m</button>[39m
    [36m<span[39m
      [33mclass[39m=[32m"filter-menu-button__menu"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"filter-menu-button__items"[39m
        [33mid[39m=[32m"s0-@menu"[39m
        [33mrole[39m=[32m"menu"[39m
      [36m>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<defs>[39m
                [36m<symbol[39m
                  [33mid[39m=[32m"icon-checkbox-unchecked-18"[39m
                  [33mviewBox[39m=[32m"0 0 18 18"[39m
                [36m>[39m
                  [36m<path[39m
                    [33md[39m=[32m"M6.4 17h5.2c1.137 0 1.929 0 2.546-.051.605-.05.953-.142 1.216-.276a3 3 0 0 0 1.311-1.311c.134-.263.226-.611.276-1.216.05-.617.051-1.41.051-2.546V6.4c0-1.137 0-1.929-.051-2.546-.05-.605-.142-.953-.276-1.216a3 3 0 0 0-1.311-1.311c-.263-.134-.611-.226-1.216-.276C13.529 1.001 12.736 1 11.6 1H6.4c-1.137 0-1.929 0-2.546.051-.605.05-.953.142-1.216.276a3 3 0 0 0-1.311 1.311c-.134.263-.226.611-.276 1.216C1.001 4.471 1 5.264 1 6.4v5.2c0 1.137 0 1.929.051 2.546.05.605.142.953.276 1.216a3 3 0 0 0 1.311 1.311c.263.134.611.226 1.216.276.617.05 1.41.051 2.546.051ZM.436 15.816C0 14.96 0 13.84 0 11.6V6.4c0-2.24 0-3.36.436-4.216A4 4 0 0 1 2.184.436C3.04 0 4.16 0 6.4 0h5.2c2.24 0 3.36 0 4.216.436a4 4 0 0 1 1.748 1.748C18 3.04 18 4.16 18 6.4v5.2c0 2.24 0 3.36-.436 4.216a4 4 0 0 1-1.748 1.748C14.96 18 13.84 18 11.6 18H6.4c-2.24 0-3.36 0-4.216-.436a4 4 0 0 1-1.748-1.748Z"[39m
                  [36m/>[39m
                [36m</symbol>[39m
              [36m</defs>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 1[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 2[0m
          [36m</span>[39m
        [36m</div>[39m
        [36m<div[39m
          [33maria-checked[39m=[32m"false"[39m
          [33mclass[39m=[32m"filter-menu-button__item"[39m
          [33mrole[39m=[32m"menuitemcheckbox"[39m
        [36m>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__checkbox"[39m
          [36m>[39m
            [36m<svg[39m
              [33maria-hidden[39m=[32m"true"[39m
              [33mclass[39m=[32m"icon icon--18"[39m
              [33mfocusable[39m=[32m"false"[39m
            [36m>[39m
              [36m<use[39m
                [33mhref[39m=[32m"#icon-checkbox-unchecked-18"[39m
              [36m/>[39m
            [36m</svg>[39m
          [36m</span>[39m
          [36m<span[39m
            [33mclass[39m=[32m"filter-menu-button__text"[39m
          [36m>[39m
            [0mitem 3[0m
          [36m</span>[39m
        [36m</div>[39m
      [36m</div>[39m
      [36m<button[39m
        [33maria-label[39m=[32m"test a11y"[39m
        [33mclass[39m=[32m"filter-menu-button__footer"[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [0mtest text[0m
      [36m</button>[39m
    [36m</span>[39m
  [36m</span>[39m
[36m</DocumentFragment>[39m"
`;
